Fixes responsive issues when going from desktop to tablet in page gutter spacing.

--- a/assets/sass/_block-elements.scss
+++ b/assets/sass/_block-elements.scss
@@ -1,9 +1,9 @@
 // Describe me so no evil shall be committed in wielding this class!
 .wrapper {
   @include outer-container;
-  @include media($tablet) {
-    padding-left: $small-spacing;
-    padding-right: $small-spacing;
+
+  @include media($desktop) {
+    @include pad(0 default);
   }
 }
 
@@ -14,13 +14,11 @@ header {
 }
 
 footer {
-
   &[role='contentinfo'] {
     @include outer-container(100%);
 
     margin-top: ($base-spacing * 2);
-    padding-top: $base-spacing;
-    padding-bottom: $base-spacing;
+    @include pad(0 default);
   }
 }
 
@@ -28,19 +26,19 @@ main {
   @include outer-container();
   padding-top: $base-spacing;
 
+  @include media($tablet) {
+    @include pad($base-spacing default 0 default);
+  }
+
   article {
     @include span-columns(7 of 12);
     @include media($tablet) {
       @include span-columns(6 of 8);
-      // @include shift(2);
     }
 
     @include media($mobile) {
       @include span-columns(4 of 4);
       @include shift(0);
-
-      padding-left: $small-spacing;
-      padding-right: $small-spacing;
     }
   }
 
@@ -77,8 +75,5 @@ main:after {
   @include media($mobile) {
     @include span-columns(4 of 4);
     @include shift(0);
-
-    padding-left: $small-spacing;
-    padding-right: $small-spacing;
   }
 }
